--- a/PraneelChat/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/PraneelChat/Views/Storyboards/Base.lproj/Main.storyboard
@@ -35,11 +35,70 @@
                     <connections>
                         <segue destination="FZg-or-kAF" kind="relationship" relationship="viewControllers" id="VOr-f5-36n"/>
                         <segue destination="Znz-5W-J2D" kind="relationship" relationship="viewControllers" id="iVH-9A-Sg9"/>
+                        <segue destination="kGi-am-Qz4" kind="relationship" relationship="viewControllers" id="G0V-0g-Pr3"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sal-UJ-fMH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-681" y="179"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="paI-mk-AYi">
+            <objects>
+                <viewController id="kGi-am-Qz4" customClass="GamesViewController" customModule="PraneelChat" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="51b-CJ-2XX">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jcF-Vt-ZKJ">
+                                <rect key="frame" x="10" y="64" width="394" height="54"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="35"/>
+                                <state key="normal" title="Ping Pong"/>
+                                <connections>
+                                    <action selector="PingPong:" destination="kGi-am-Qz4" eventType="touchUpInside" id="0K8-lD-I2h"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dPE-OX-8dd">
+                                <rect key="frame" x="10" y="138" width="394" height="54"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="35"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Aa-Hz-faE">
+                                <rect key="frame" x="10" y="212" width="394" height="54"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="35"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3WN-Ee-pPN">
+                                <rect key="frame" x="10" y="286" width="394" height="53"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="34"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="dPE-OX-8dd" firstAttribute="top" secondItem="jcF-Vt-ZKJ" secondAttribute="bottom" constant="20" id="5RA-l0-h1x"/>
+                            <constraint firstItem="GLc-m3-H60" firstAttribute="trailing" secondItem="jcF-Vt-ZKJ" secondAttribute="trailing" constant="10" id="62V-gs-ZB6"/>
+                            <constraint firstItem="jcF-Vt-ZKJ" firstAttribute="top" secondItem="GLc-m3-H60" secondAttribute="top" constant="20" id="9td-RW-fg2"/>
+                            <constraint firstItem="jcF-Vt-ZKJ" firstAttribute="leading" secondItem="GLc-m3-H60" secondAttribute="leading" constant="10" id="FXy-AP-eH5"/>
+                            <constraint firstItem="dPE-OX-8dd" firstAttribute="leading" secondItem="GLc-m3-H60" secondAttribute="leading" constant="10" id="Fh6-LF-Gch"/>
+                            <constraint firstItem="4Aa-Hz-faE" firstAttribute="top" secondItem="dPE-OX-8dd" secondAttribute="bottom" constant="20" id="Frx-Ir-uaD"/>
+                            <constraint firstItem="3WN-Ee-pPN" firstAttribute="leading" secondItem="GLc-m3-H60" secondAttribute="leading" constant="10" id="HaA-l0-VwG"/>
+                            <constraint firstItem="3WN-Ee-pPN" firstAttribute="top" secondItem="4Aa-Hz-faE" secondAttribute="bottom" constant="20" id="QIU-Pc-k9e"/>
+                            <constraint firstItem="GLc-m3-H60" firstAttribute="trailing" secondItem="3WN-Ee-pPN" secondAttribute="trailing" constant="10" id="VtC-Pk-ceJ"/>
+                            <constraint firstItem="GLc-m3-H60" firstAttribute="trailing" secondItem="dPE-OX-8dd" secondAttribute="trailing" constant="10" id="WdJ-Nz-TLL"/>
+                            <constraint firstItem="GLc-m3-H60" firstAttribute="trailing" secondItem="4Aa-Hz-faE" secondAttribute="trailing" constant="10" id="YRW-MB-xwi"/>
+                            <constraint firstItem="4Aa-Hz-faE" firstAttribute="leading" secondItem="GLc-m3-H60" secondAttribute="leading" constant="10" id="rDV-Tv-1Fa"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="GLc-m3-H60"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="pZl-OL-nYC"/>
+                    <connections>
+                        <segue destination="F9D-IN-WJV" kind="show" identifier="PingPongGame" id="9hf-HF-b2y"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JJT-63-0To" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="796" y="883"/>
         </scene>
         <!--Profile-->
         <scene sceneID="fqD-Ov-U2A">
@@ -71,6 +130,22 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SDl-aM-ZgM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="64" y="1590"/>
+        </scene>
+        <!--Ping Pong View Controller-->
+        <scene sceneID="pyy-HB-M3r">
+            <objects>
+                <viewController id="F9D-IN-WJV" customClass="PingPongViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0e1-p8-5oX">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="Vpd-Qq-YjU"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="5YZ-7k-y7l"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5Jd-LG-sRz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1061" y="1598"/>
         </scene>
         <!--Profile-->
         <scene sceneID="JHw-DD-3Jn">
